--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,12 @@
     src: url("fonts/Avenir.ttc") format("opentype");
 }
 
-
 body {
+  margin: 0;
+}
+
+.wrapper {
+  min-height: 100vh;
   background-color: #080E57;
   margin: 0;
   -webkit-touch-callout: none; /* iOS Safari */
@@ -40,6 +44,7 @@ img {
   color: #FFFFFF;
   padding: 30px 100px;
   font-family: Futura;
+  margin-top: 0;
 }
 
 .content {
@@ -305,6 +310,7 @@ span.swiper-pagination-bullet {
   width: calc(50% - 150px);
   margin-left: 50px;
   margin-right: 100px;
+  z-index: 1;
 }
 
 .description-box {
@@ -407,7 +413,8 @@ span.swiper-pagination-bullet {
 
 @media screen and (max-width: 1300px) {
   .header-title {
-    margin: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     padding: 10px;
     margin-bottom: 30px;
   }
@@ -441,8 +448,7 @@ span.swiper-pagination-bullet {
 
 @media screen and (max-width: 800px) {
   .header-title {
-    margin: 10px;
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 30px;
     font-size: 25px;
     line-height: 1.3;
@@ -465,6 +471,7 @@ span.swiper-pagination-bullet {
 
   .circles-wrapper {
     width: 100%;
+    margin-bottom: 0;
   }
 
   .circles-wrapper .box {
